# server/src/app.module.ts
@@ -7,6 +7,7 @@ import { AuthModule } from './auth/auth.module';
 import { JwtAuthGuard } from './auth/jwt-auth.guard';
 import { CountriesModule } from './countries/countries.module';
 import { CustomersModule } from './customers/customers.module';
+import { DashboardModule } from './dashboard/dashboard.module';
 import { DatabaseModule } from './database/database.module';
 import { ImportFilesModule } from './import-files/import-files.module';
 import { MblModule } from './mbl/mbl.module';
@@ -20,6 +21,7 @@ import { SuppliersModule } from './suppliers/suppliers.module';
     AuthModule,
     CountriesModule,
     CustomersModule,
+    DashboardModule,
     ImportFilesModule,
     MblModule,
     OrdersModule,
